tests/baselines/reference/parseUnaryExpressionNoTypeAssertionInJsx1.errors.txt
index.js(2,13): error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
index.js(2,14): error TS17008: JSX element 'number' has no corresponding closing tag.
index.js(3,1): error TS1005: '</' expected.


==== index.js (3 errors) ====
    const x = "oops";
    const y = + <number> x;
                ~~~~~~~~
!!! error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
                 ~~~~~~
!!! error TS17008: JSX element 'number' has no corresponding closing tag.
    
    
!!! error TS1005: '</' expected.